--- a/mystyle.css
+++ b/mystyle.css
@@ -1,10 +1,10 @@
 body {
   background-color: black;
-  colour: white;
+  color: white;
   text-align: center;
 }
 
 h1 {
   margin-left: 20px;
-  colour: white;
+  color: white;
 }
