--- a/mystyle.css
+++ b/mystyle.css
@@ -1,9 +1,14 @@
 @font-face {
-  font-family:Emizen ;
-  src: local('Emizen.ttf');}
+  font-family: 'emizen';
+  src: local('emizen'), url('emizen.ttf') format('truetype');
+}
 
 header {
-  font-family: Emizen;
+  position: relative;
+  left: 30px;
+  border: 3px solid #5204aa;
+  colour: rgb(0, 0, 0);
+  font-family: 'emizen', sans-serif; 
 }
 
 body {
