--- a/mystyle.css
+++ b/mystyle.css
@@ -7,6 +7,7 @@ header {
   position: relative;
   left: 30px;
   border: 3px solid #5204aa;
+  font-size: x-large;
   colour: rgb(0, 0, 0);
   font-family: 'emizen', sans-serif; 
 }
