--- a/mystyle.css
+++ b/mystyle.css
@@ -4,7 +4,7 @@
 }
 
 header {
-  text-align: center;
+  text-align: left;
   font-size: 80;
   colour: rgb(0, 0, 0);
   font-family: 'emizen', sans-serif; 
