--- a/mystyle.css
+++ b/mystyle.css
@@ -6,7 +6,7 @@
 header {
   text-align: left;
   font-size: 80;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   font-family: 'emizen', sans-serif; 
 }
 
@@ -39,3 +39,13 @@ h1 {
 .Main { grid-area: Main; }
 
 .Bottom { grid-area: Bottom; }
+
+a:link, a:visited {
+  background-color: rgb(0, 0, 0);
+  color: rgb(0, 255, 162);
+  border: 2px solid rgb(255, 0, 204);
+  padding: 10px 20px;
+  text-align: center;
+  display: inline-block;
+  font-family: 'emizen', sans-serif;
+}
