--- a/mystyle.css
+++ b/mystyle.css
@@ -16,16 +16,11 @@ body {
   text-align: center;
 }
 
-h1 {
-  margin-left: 20px;
-  color: white;
-}
-
 .container {
   display: grid;
-  grid-template-columns: 0.7fr 1.3fr 1fr;
-  grid-template-rows: 0.4fr 2.3fr 0.3fr;
-  gap: 0px 0px;
+  grid-template-columns: 1fr 2fr 1fr; 
+  grid-template-rows: 1fr 3fr 1fr; 
+  gap: 20px; 
   grid-auto-flow: row;
   grid-template-areas:
     "Top Top Top"
@@ -46,8 +41,8 @@ a:link, a:visited, a:hover {
   color: rgb(0, 255, 162);
   border: 2px solid rgb(255, 0, 204);
   padding: 10px 20px;
-  text-align: left;
-  display: inline-block;
+  text-align: center;
+  display: block; 
   font-family: 'emizen', sans-serif;
-  text-decoration: none; /* Entfernt die Standard-Link-Unterstreichung */
+  text-decoration: none; 
 }
