--- a/mystyle.css
+++ b/mystyle.css
@@ -41,7 +41,7 @@ a:link, a:visited, a:hover {
   color: rgb(0, 255, 162);
   border: 2px solid rgb(255, 0, 204);
   padding: 10px 20px;
-  text-align: center;
+  text-align: left;
   display: block; 
   font-family: 'emizen', sans-serif;
   text-decoration: none; 
