--- a/mystyle.css
+++ b/mystyle.css
@@ -46,3 +46,20 @@ a:link, a:visited, a:hover {
   font-family: 'emizen', sans-serif;
   text-decoration: none; 
 }
+
+table {
+  width: 80%;
+  margin: 20px auto; /* Zentriere die Tabelle und füge Abstand hinzu */
+  border-collapse: collapse; /* Entferne den Abstand zwischen den Zellen */
+}
+
+th, td {
+  border: 2px solid rgb(255, 0, 204);
+  padding: 10px;
+  text-align: left;
+}
+
+th {
+  background-color: rgb(0, 0, 0);
+  color: rgb(0, 255, 162);
+}
