--- a/mystyle.css
+++ b/mystyle.css
@@ -32,6 +32,7 @@ body {
 
 .Sidebar { grid-area: Sidebar; }
 
+
 .Main { grid-area: Main; }
 
 .Bottom { grid-area: Bottom; }
@@ -41,6 +42,7 @@ a:link, a:visited, a:hover {
   color: rgb(0, 255, 162);
   border: 2px solid rgb(255, 0, 204);
   padding: 10px 20px;
+  margin-bottom: 10px;
   text-align: center;
   display: block; 
   font-family: 'emizen', sans-serif;
