--- a/mystyle.css
+++ b/mystyle.css
@@ -52,7 +52,7 @@ a:link, a:visited, a:hover {
   color: rgb(0, 255, 162);
   border: 2px solid rgb(255, 0, 204);
   padding: 10px 20px;
-  margin-bottom: 10px;
+  margin-bottom: 10px; 
   text-align: center;
   display: block; 
   font-family: 'emizen', sans-serif;
@@ -61,8 +61,8 @@ a:link, a:visited, a:hover {
 
 table {
   width: 80%;
-  margin: 20px auto; /* Zentriere die Tabelle und füge Abstand hinzu */
-  border-collapse: collapse; /* Entferne den Abstand zwischen den Zellen */
+  margin: 10px auto; 
+  border-collapse: collapse;
 }
 
 th, td {
@@ -70,6 +70,7 @@ th, td {
   padding: 10px;
   text-align: left;
 }
+
 
 th {
   background-color: rgb(0, 0, 0);
