--- a/mystyle.css
+++ b/mystyle.css
@@ -52,7 +52,7 @@ a:link, a:visited, a:hover {
   color: rgb(0, 255, 162);
   border: 2px solid rgb(255, 0, 204);
   padding: 10px 20px;
-  margin-bottom: 10px; 
+  margin-top: 10px; 
   text-align: center;
   display: block; 
   font-family: 'emizen', sans-serif;
@@ -61,7 +61,7 @@ a:link, a:visited, a:hover {
 
 table {
   width: 80%;
-  margin: 10px auto; 
+  margin-top: 10px; 
   border-collapse: collapse;
 }
 
