--- a/mystyle.css
+++ b/mystyle.css
@@ -34,6 +34,10 @@ body {
 
 .Sidebar a {
   grid-area: Sidebar;
+  box-shadow: inset 0 0 0 0 #51d0ff;
+  margin: 0 -.25rem;
+  padding: 0 .25rem;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
   background-color: rgb(0, 0, 0);
   color: rgb(0, 255, 162);
   border: 2px solid rgb(255, 0, 204);
@@ -43,6 +47,10 @@ body {
   display: block;
   font-family: 'emizen', sans-serif;
   text-decoration: none;
+}
+a:hover {
+  box-shadow: inset 1000px 0 0 0 #7409ff;
+  color: white;
 }
 
 .Main { grid-area: Main; }
