--- a/mystyle.css
+++ b/mystyle.css
@@ -1,8 +1,29 @@
+body {
+  margin: 0;
+  background-color: #000;
+}
+
+.container {
+  background-color: rgba(255, 255, 255, 0.85);
+  margin: 50px 10%;
+  padding: 3rem;
+  position: relative;
+  z-index: 1;
+}
+
+#canv {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+/* CSS für Regen-Effekt */
 @font-face {
   font-family: 'emizen';
   src: local('emizen'), url('emizen.ttf') format('truetype');
 }
 
+/* Header-Stile */
 header {
   text-align: left;
   font-size: 80px;
@@ -10,34 +31,51 @@ header {
   font-family: 'emizen', sans-serif;
 }
 
+/* Body-Stile */
 body {
-  body {background: black;}
-            canvas {display:block;}
-  background-color: black;
+  background: black; /* Hintergrundfarbe */
   color: white;
   text-align: left;
 }
 
+/* Container-Stile */
 .container {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr; 
-  grid-template-rows: 1fr 3fr 1fr; 
-  gap: 20px; 
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 3fr 1fr;
+  gap: 20px;
   grid-auto-flow: row;
   grid-template-areas:
     "Top Top Top"
     "Sidebar Main Main"
     "Bottom Bottom Bottom";
+  background-color: rgba(0, 0, 0, 0.85); /* Hintergrundfarbe */
+  margin: 20px 5%; /* Geänderte Margin mit kleinerem oberen und linken Abstand */
+  padding: 3rem;
+  position: relative;
+  z-index: 1;
 }
 
-.Top { grid-area: Top; }
 
+/* Top-Stil */
+.Top {
+  grid-area: Top;
+}
+
+/* Sidebar-Stil */
 .Sidebar a {
   grid-area: Sidebar;
   box-shadow: inset 0 0 0 0 #52d1ff;
   margin: 0 -.25rem;
   padding: 0 .25rem;
   transition: color .5s ease-in-out, box-shadow .5s ease-in-out;
+}
+
+.Sidebar a:link,
+.Sidebar a:visited {
+  /* Aktuelle Breite: 20px */
+  /* Ändere die Breite nach Bedarf */
+  width: 200px; /* Beispiel: Längere Breite von 200px */
   background-color: rgb(0, 0, 0);
   color: rgb(0, 255, 162);
   border: 2px solid rgb(255, 0, 204);
@@ -48,80 +86,68 @@ body {
   font-family: 'emizen', sans-serif;
   text-decoration: none;
 }
-a:hover {
+
+
+.Sidebar a:hover {
   box-shadow: inset 1000px 0 0 0 #7409ff;
   color: white;
 }
 
-.Main { grid-area: Main; }
+/* Main-Stil */
+.Main {
+  grid-area: Main;
+}
 
-.Bottom { grid-area: Bottom; }
+/* Bottom-Stil */
+.Bottom {
+  grid-area: Bottom;
+}
 
-a:link, a:visited{
+/* Link-Stile */
+a:link,
+a:visited {
   background-color: rgb(0, 0, 0);
   color: rgb(0, 255, 162);
   border: 2px solid rgb(255, 0, 204);
   padding: 10px 20px;
-  margin-top: 10px; 
+  margin-top: 10px;
   text-align: center;
-  display: block; 
+  display: block;
   font-family: 'emizen', sans-serif;
-  text-decoration: none; 
+  text-decoration: none;
 }
 
-a:hover{  background-color: rgb(83, 0, 184);
+a:hover {
+  background-color: rgb(83, 0, 184);
   color: rgb(0, 255, 162);
   border: 2px solid rgb(255, 0, 204);
   padding: 10px 20px;
-  margin-top: 10px; 
+  margin-top: 10px;
   text-align: center;
-  display: block; 
+  display: block;
   font-family: 'emizen', sans-serif;
-  text-decoration: none; 
+  text-decoration: none;
 }
 
+/* Tabelle-Stile */
 table {
   width: 80%;
-  margin-top: 10px; 
+  margin-top: 10px;
   border-collapse: collapse;
 }
 
-th, td {
+th,
+td {
   border: 2px solid rgb(255, 0, 204);
   padding: 10px 20px;
   text-align: left;
 }
 
-
 th {
   background-color: rgb(0, 0, 0);
   color: rgb(0, 255, 162);
 }
-
-
-[effect=ripple] {
-  cursor: pointer;
+html, body {
   overflow: hidden;
-  position: relative;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-[effect=ripple]:before {
-  content: "";
-  display: block;
-  border-radius: 50%;
-  position: absolute;
-  pointer-events: none;
-  transform-origin: center;
-  top: calc(var(--y) * 1px);
-  left: calc(var(--x) * 1px);
-  width: calc(var(--d) * 1px);
-  height: calc(var(--d) * 1px);
-  background: var(--ripple-background, white);
-  transform: translate(-50%, -50%) scale(var(--s, 1));
-  opacity: calc(var(--o, 1) * var(--ripple-opacity, 0.3));
-  transition: calc(var(--t, 0) * var(--ripple-duration, 600ms)) var(--ripple-easing, linear);
-}
+
