--- a/rain.css
+++ b/rain.css
@@ -1,7 +1,12 @@
 body {
   margin: 0;
-  font-size: 80px;
+  font-size: 18px;
   background-color: #000;
+}
+.Main a {
+  display: inline-block; 
+  width: auto;
+  max-width: 100%; 
 }
 
 .container {
