--- a/mystyle.css
+++ b/mystyle.css
@@ -46,7 +46,7 @@ body {
 
 /* Container-Stile */
 .container {
-  display: grid;
+  display: block;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1fr 3fr 1fr;
   gap: 20px;
