--- a/rain.css
+++ b/rain.css
@@ -108,6 +108,12 @@ body {
 .Bottom {
   grid-area: Bottom;
 }
+a {
+  box-shadow: inset 0 0 0 0 #52d1ff;
+  margin: 0 -.25rem;
+  padding: 0 .25rem;
+  transition: color .5s ease-in-out, box-shadow .5s ease-in-out;
+}
 
 /* Link-Stile */
 a:link,
@@ -121,11 +127,13 @@ a:visited {
   display: block;
   font-family: 'emizen', sans-serif;
   text-decoration: none;
+  position: relative; 
+  transition: color .5s ease-in-out, box-shadow .5s ease-in-out; 
 }
 
 a:hover {
+  color: rgb(255, 255, 255); 
   background-color: rgb(83, 0, 184);
-  color: rgb(0, 255, 162);
   border: 2px solid rgb(255, 0, 204);
   padding: 10px 20px;
   margin-top: 10px;
@@ -133,19 +141,23 @@ a:hover {
   display: block;
   font-family: 'emizen', sans-serif;
   text-decoration: none;
+  box-shadow: inset 1500px 0 0 0 #7409ff; 
+  transition: box-shadow 0.5s ease-in-out; 
 }
+
+
 
 /* Tabelle-Stile */
 table {
   width: 80%;
-  margin-top: 10px;
+  margin-top: 0px;
   border-collapse: collapse;
 }
 
 th,
 td {
   border: 2px solid rgb(255, 0, 204);
-  padding: 10px 20px;
+  padding: 0px 20px;
   text-align: left;
 }
 
@@ -157,3 +169,18 @@ html, body {
   overflow: hidden;
 }
 
+.icon-link {
+  display: flex;
+  align-items: left; /* Zentriere die Elemente vertikal */
+  text-decoration: none; /* Entferne Unterstreichung für Links */
+}
+
+.icon {
+  width: 100px; /* Passe die Breite des Bildes an */
+  height: 100px; /* Passe die Höhe des Bildes an */
+  margin-right: 10px; /* Abstand zwischen Bild und Text */
+}
+
+.icon-text {
+  font-size: 80px; /* Passe die Schriftgröße des Textes an */
+}
